--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,55 @@
+
 body {
-    background-color: gray;
+    background-color: #264653;
 	/* Use a system font, if none are available use an available sans-sarif   font */
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+	font-family: 'Indie Flower', cursive;
+  BlinkMacSystemFont, "Segoe UI",
 		Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-	margin: 0;
+  color: #e76f51;
+	margin: 0px;
   height: 100vh;
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+body > h1 {
+  font-size: 42px;
+  text-shadow: 1px 1px #e9c46a;
 }
 
 section.board {
   display: grid;
   grid-template-rows: repeat(3, 10vmin);
   grid-template-columns: repeat(3, 10vmin);
-  grid-gap: 0vmin;
+  grid-gap: 1vmin;
+  justify-content: center;
 }
 
 div {
-  border: 3px solid black;
+  border: 3px solid #2a9d8f;
   font-size: 8vmin;
   text-align: center;
   vertical-align: middle;
+}
+
+#reset-button {
+  font-family: 'Indie Flower', cursive;
+  BlinkMacSystemFont, "Segoe UI",
+		Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-size: 18px;
+  margin: 100px;
+  color: #e76f51;
+  background-color: #264653;
+  width: 150px;
+  height: 40px;
+  border: 4px solid;
+  border-radius: 8%;
+}
+
+#reset-button:hover {
+  margin: 100px;
+  color: #f4a261;
+  background-color: #264653;
+  border: 3px solid;
+  box-shadow: 0px 1px 16px 1px #2a9d8f, 0px 1px 16px 1px #2a9d8f;
 }
