--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
   BlinkMacSystemFont, "Segoe UI",
 		Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   color: #e76f51;
+  text-shadow: 1px 1px #e9c46a;
 	margin: 0px;
   height: 100vh;
   display: flex;
@@ -13,21 +14,31 @@ body {
   align-items: center;
 }
 body > h1 {
+  font-size: 50px;
+}
+
+body > h2 {
   font-size: 42px;
-  text-shadow: 1px 1px #e9c46a;
+}
+
+hr {
+  height: 2px;
+  width: 100%;
+  border: solid #2a9d8f;
+  background-color: #2a9d8f;
 }
 
 section.board {
   display: grid;
-  grid-template-rows: repeat(3, 10vmin);
-  grid-template-columns: repeat(3, 10vmin);
+  grid-template-rows: repeat(3, 15vmin);
+  grid-template-columns: repeat(3, 15vmin);
   grid-gap: 1vmin;
   justify-content: center;
 }
 
 div {
   border: 3px solid #2a9d8f;
-  font-size: 8vmin;
+  font-size: 12vmin;
   text-align: center;
   vertical-align: middle;
 }
@@ -36,20 +47,25 @@ div {
   font-family: 'Indie Flower', cursive;
   BlinkMacSystemFont, "Segoe UI",
 		Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  font-size: 18px;
-  margin: 100px;
+  font-size: 22px;
+  margin: 60px;
   color: #e76f51;
+  text-shadow: .5px .5px #e9c46a;
   background-color: #264653;
-  width: 150px;
+  width: 200px;
   height: 40px;
   border: 4px solid;
   border-radius: 8%;
 }
 
 #reset-button:hover {
-  margin: 100px;
   color: #f4a261;
+  text-shadow: .5px .5px #e76f51;
   background-color: #264653;
   border: 3px solid;
   box-shadow: 0px 1px 16px 1px #2a9d8f, 0px 1px 16px 1px #2a9d8f;
+}
+
+#meow {
+  justify-content: left;
 }
